finish login, logout, change_pwd for admin
